kubernetes/installation/manual/external-dns/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    name: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.15.0
        args:
        - --registry=txt
        - --txt-prefix=external-dns-
        - --txt-owner-id=k8s-prod
        - --provider=rfc2136
        - --rfc2136-host=dns-bind-server-master.internal.locthp.com
        - --rfc2136-port=53
        - --rfc2136-zone=internal.locthp.com
        # Add tsig key below
        - --rfc2136-tsig-secret=
        - --rfc2136-tsig-secret-alg=hmac-sha256
        - --rfc2136-tsig-keyname=tsig-key
        - --rfc2136-tsig-axfr
        - --source=ingress
        - --rfc2136-min-ttl=300s
